Bug 846465 - Fix OMX plugin crash on HTC One X r=doublec