media/omx-plugin/OmxPlugin.cpp
@@ -64,6 +64,14 @@ private:
 
   MediaStreamSource(const MediaStreamSource &);
   MediaStreamSource &operator=(const MediaStreamSource &);
+
+#ifdef MOZ_ANDROID_HTC_WORKAROUND
+  // libstagefright on some Jellybean HTC devices (at least the Tegra 3 One X)
+  // calls this function and expects this magic number to be returned when
+  // sniffing audio stream formats.
+  // It is unclear what this is for or what it does.
+  virtual uint32_t MagicalHTCIncantation() { return 0x3f0; }
+#endif
 };
 
 MediaStreamSource::MediaStreamSource(PluginHost *aPluginHost, Decoder *aDecoder) :
